--- a/index.html
+++ b/index.html
@@ -7,6 +7,38 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
+
+          <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <ul class="nav navbar-nav navbar-left">
+                <li><a href="#"> Quem somos? </a></li>
+                <li><a href="#"> Tutoriais </a></li>
+              </ul>
+              <li><a class="cc" href="#"> CC </a></li>
+              <ul class="nav navbar-nav navbar-right">
+                <li><a href="#"> Componentes </a></li>
+                <li><a href="#"> Contactos </a></li>
+              </ul>
+          </div>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+      </nav>
+
+    <!--
       <nav class="navbar navbar-default">
         <div class="container-fluid">
         <ul class="nav navbar-nav">
@@ -19,7 +51,7 @@
           <li><a href="contactos.html">Contactos</a></li>
         </ul>
       </div>
-    </nav>
+    </nav>-->
 
     <script src="./js/jquery-3.2.1.min.js" charset="utf-8"></script>
     <script src="./js/bootstrap.min.js" charset="utf-8"></script>
