--- a/quemsomos.html
+++ b/quemsomos.html
@@ -33,7 +33,7 @@
     <div class="col-md-2 quemsomos">
       <img src="./img/cc.png" alt="CC">
     </div>
-
+  </div>
     <script src="./js/jquery-3.2.1.min.js" charset="utf-8"></script>
     <script src="./js/bootstrap.min.js" charset="utf-8"></script>
     <script src="./js/script.js" charset="utf-8"></script>
