--- a/index.html
+++ b/index.html
@@ -7,54 +7,41 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-
-          <nav class="navbar navbar-default">
-        <div class="container-fluid">
-          <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="menu">
+      <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
           <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
           </div>
-
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <div id="navbar" class="collapse navbar-collapse" style="margin-left: 25%;">
             <ul class="nav navbar-nav">
-              <ul class="nav navbar-nav navbar-left">
-                <li><a href="#"> Quem somos? </a></li>
-                <li><a href="#"> Tutoriais </a></li>
-              </ul>
-              <li><a class="cc" href="#"> CC </a></li>
-              <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"> Componentes </a></li>
-                <li><a href="#"> Contactos </a></li>
-              </ul>
-          </div>
+              <li>
+                <a href="quemsomos.html">Quem somos?</a>
+              </li>
+              <li>
+                <a href="tutoriais.html">Tutoriais</a>
+              </li>
+              <li>
+                <a class="logo" href="index.html">CC</a>
+              </li>
+              <li>
+                <a href="componentes.html">Componentes</a>
+              </li>
+              <li>
+                <a href="contactos.html">Contactos</a>
+              </li>
             </ul>
-          </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
+          </div><!--/.nav-collapse -->
+        </div>
       </nav>
+    </div>
 
-    <!--
-      <nav class="navbar navbar-default">
-        <div class="container-fluid">
-        <ul class="nav navbar-nav">
-          <li><a href="quemsomos.html">Quem somos?</a></li>
-          <li><a href="tutoriais.html">Tutoriais</a></li>
-          <div class="navbar-header">
-            <a class="navbar-brand logo" href="index.html">CC</a>
-          </div>
-          <li><a href="componentes.html">Componentes</a></li>
-          <li><a href="contactos.html">Contactos</a></li>
-        </ul>
-      </div>
-    </nav>-->
-
-    <script src="./js/jquery-3.2.1.min.js" charset="utf-8"></script>
-    <script src="./js/bootstrap.min.js" charset="utf-8"></script>
-    <script src="./js/script.js" charset="utf-8"></script>
+    <script src="./js/jquery-3.2.1.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
   </body>
 </html>
