--- a/quemsomos.html
+++ b/quemsomos.html
@@ -7,35 +7,58 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-  <div class="branco">
-      <nav class="navbar navbar-default">
-        <div class="container-fluid">
-        <ul class="nav navbar-nav">
-          <li><a href="quemsomos.html">Quem somos?</a></li>
-          <li><a href="tutoriais.html">Tutoriais</a></li>
+    <div class="menu">
+      <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
           <div class="navbar-header">
-            <a class="navbar-brand logo" href="index.html">CC</a>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
           </div>
-          <li><a href="componentes.html">Componentes</a></li>
-          <li><a href="contactos.html">Contactos</a></li>
-        </ul>
+          <div id="navbar" class="collapse navbar-collapse" style="margin-left: 25%;">
+            <ul class="nav navbar-nav">
+              <li>
+                <a href="quemsomos.html">Quem somos?</a>
+              </li>
+              <li>
+                <a href="tutoriais.html">Tutoriais</a>
+              </li>
+              <li>
+                <a class="logo" href="index.html">CC</a>
+              </li>
+              <li>
+                <a href="componentes.html">Componentes</a>
+              </li>
+              <li>
+                <a href="contactos.html">Contactos</a>
+              </li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </nav>
+    </div>
+
+    <div class="body">
+      <div class="container">
+        <div class="col-md-6 left">
+          <h1>Quem somos?</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+
+        <div class="col-md-6 right">
+          <img src="./img/cc.png" alt="CC">
+        </div>
+        </div>
       </div>
-    </nav>
-
-    <div class="col-md-7 qumesomos2">
-      <h1>Quem somos?</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
     </div>
 
-    <div class="col-md-2 quemsomos">
-      <img src="./img/cc.png" alt="CC">
-    </div>
-  </div>
-    <script src="./js/jquery-3.2.1.min.js" charset="utf-8"></script>
-    <script src="./js/bootstrap.min.js" charset="utf-8"></script>
-    <script src="./js/script.js" charset="utf-8"></script>
+    <script src="./js/jquery-3.2.1.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
   </body>
 </html>
