--- a/tutoriais.html
+++ b/tutoriais.html
@@ -7,30 +7,58 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-  <div class="branco">
-      <nav class="navbar navbar-default">
-        <div class="container-fluid">
-        <ul class="nav navbar-nav">
-          <li><a href="quemsomos.html">Quem somos?</a></li>
-          <li><a href="tutoriais.html">Tutoriais</a></li>
+    <div class="menu">
+      <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
           <div class="navbar-header">
-            <a class="navbar-brand logo" href="index.html">CC</a>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
           </div>
-          <li><a href="componentes.html">Componentes</a></li>
-          <li><a href="contactos.html">Contactos</a></li>
-        </ul>
-      </div>
-    </nav>
-
-    <div class="col-md-10">
-      <h1 class="tutorial">Tutorial</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/I39RKjerJss" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+          <div id="navbar" class="collapse navbar-collapse" style="margin-left: 25%;">
+            <ul class="nav navbar-nav">
+              <li>
+                <a href="quemsomos.html">Quem somos?</a>
+              </li>
+              <li>
+                <a href="tutoriais.html">Tutoriais</a>
+              </li>
+              <li>
+                <a class="logo" href="index.html">CC</a>
+              </li>
+              <li>
+                <a href="componentes.html">Componentes</a>
+              </li>
+              <li>
+                <a href="contactos.html">Contactos</a>
+              </li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </nav>
     </div>
 
-    <script src="./js/jquery-3.2.1.min.js" charset="utf-8"></script>
-    <script src="./js/bootstrap.min.js" charset="utf-8"></script>
-    <script src="./js/script.js" charset="utf-8"></script>
+    <div class="body">
+      <div class="container">
+        <div class="col-md-12 top">
+          <h1>Tutoriais</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+
+        <div class="col-md-12 bot">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/I39RKjerJss" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+        </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="./js/jquery-3.2.1.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
   </body>
 </html>
