--- a/componentes.html
+++ b/componentes.html
@@ -18,7 +18,7 @@
               <span class="icon-bar"></span>
             </button>
           </div>
-          <div id="navbar" class="collapse navbar-collapse" style="margin-left: 25%;">
+          <div id="navbar" class="collapse navbar-collapse as">
             <ul class="nav navbar-nav">
               <li>
                 <a href="quemsomos.html">Quem somos?</a>
