--- a/componentes.html
+++ b/componentes.html
@@ -9,8 +9,8 @@
   <body>
     <div class="menu">
       <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
           <div class="navbar-header">
+            <div class="container">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
@@ -33,7 +33,7 @@
                 <a href="componentes.html">Componentes</a>
               </li>
               <li>
-                <a href="contactos.html">Contactos</a>
+                <a href="melhorias.html">Melhorias</a>
               </li>
             </ul>
           </div><!--/.nav-collapse -->
@@ -52,13 +52,15 @@
         </div>
 
         <div class="col-md-6 right">
-          <img src="./img/mb.jpg" alt="Motherboard">
+          <a href="#" class="pop">
+            <img class="imgcom" src="./img/mb.jpg" alt="Motherboard">
+          </a>
         </div>
 
         <div class="col-md-6 left">
-          <p>
-            <img src="./img/pr.jpg" alt="Motherboard">
-          </p>
+          <a href="./img/pr.jpg">
+            <img class="imgcom" src="./img/pr.jpg" alt="Motherboard">
+          </a>
         </div>
 
         <div class="col-md-6 right">
