--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div class="menu">
-      <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
+      <nav class="navbar navbar-inverse">
           <div class="navbar-header">
+            <div class="container">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
@@ -33,7 +33,7 @@
                 <a href="componentes.html">Componentes</a>
               </li>
               <li>
-                <a href="contactos.html">Contactos</a>
+                <a href="melhorias.html">Melhorias</a>
               </li>
             </ul>
           </div><!--/.nav-collapse -->
