--- a/tutoriais.html
+++ b/tutoriais.html
@@ -9,8 +9,8 @@
   <body>
     <div class="menu">
       <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
           <div class="navbar-header">
+            <div class="container">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
@@ -33,7 +33,7 @@
                 <a href="componentes.html">Componentes</a>
               </li>
               <li>
-                <a href="contactos.html">Contactos</a>
+                <a href="melhorias.html">Melhorias</a>
               </li>
             </ul>
           </div><!--/.nav-collapse -->
@@ -50,15 +50,46 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </p>
         </div>
-
-        <div class="col-md-12 bot">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/I39RKjerJss" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-        </div>
-        </div>
       </div>
+<div class="container">
+  <div class="col-md-12 bot">
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+      </ol>
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="./img/mb.jpg" alt="Motherboard">
+        </div>
+
+        <div class="item">
+          <img src="./img/pr.jpg" alt="Processador">
+        </div>
+
+      </div>
+
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Anterior</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Proximo</span>
+      </a>
     </div>
+  </div>
+</div>
+
+</div>
+
 
     <script src="./js/jquery-3.2.1.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
