--- a/tutoriais.html
+++ b/tutoriais.html
@@ -5,6 +5,7 @@
     <title>CC</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/animate.css">
   </head>
   <body>
     <div class="menu">
@@ -42,7 +43,7 @@
     </div>
 
     <div class="body">
-      <div class="container">
+      <div class="container animated fadeIn">
         <div class="col-md-12 top">
           <h1>Tutoriais</h1>
           <p>
@@ -51,7 +52,7 @@
           </p>
         </div>
       </div>
-<div class="container">
+<div class="container animated fadeIn">
   <div class="col-md-12 bot">
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
