--- a/componentes.html
+++ b/componentes.html
@@ -5,10 +5,10 @@
     <title>CC</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/animate.css">
   </head>
   <body>
-    <div class="menu">
-      <nav class="navbar navbar-inverse navbar-fixed-top">
+      <nav class="navbar navbar-inverse navbar-fixed-top" data-spy="affix" data-offset-top="197">
           <div class="navbar-header">
             <div class="container">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -18,7 +18,7 @@
               <span class="icon-bar"></span>
             </button>
           </div>
-          <div id="navbar" class="collapse navbar-collapse as">
+          <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
               <li>
                 <a href="quemsomos.html">Quem somos?</a>
@@ -39,10 +39,9 @@
           </div><!--/.nav-collapse -->
         </div>
       </nav>
-    </div>
 
     <div class="body">
-      <div class="container">
+      <div class="container animated fadeIn">
         <div class="col-md-6 left">
           <h1>Motherboard</h1>
           <p>
@@ -52,15 +51,28 @@
         </div>
 
         <div class="col-md-6 right">
-          <a href="#" class="pop">
-            <img class="imgcom" src="./img/mb.jpg" alt="Motherboard">
-          </a>
-        </div>
+            <img id="myImg" class="imgcom" src="./img/mb.jpg" alt="Motherboard">
 
+            <div id="myModal" class="modal">
+
+            <span class="close">&times;</span>
+
+            <img class="modal-content" id="img01">
+
+              <div id="caption"></div>
+            </div>
+        </div>
         <div class="col-md-6 left">
-          <a href="./img/pr.jpg">
-            <img class="imgcom" src="./img/pr.jpg" alt="Motherboard">
-          </a>
+            <img id="myImg" class="imgcom" src="./img/pr.jpg" alt="Processador">
+
+            <div id="myModal" class="modal">
+
+            <span class="close">&times;</span>
+
+            <img class="modal-content" id="img01">
+
+              <div id="caption"></div>
+            </div>
         </div>
 
         <div class="col-md-6 right">
@@ -74,5 +86,8 @@
 
     <script src="./js/jquery-3.2.1.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/script.js"></script>
+
+    </script>
   </body>
 </html>
