--- a/quemsomos.html
+++ b/quemsomos.html
@@ -5,6 +5,7 @@
     <title>CC</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/animate.css">
   </head>
   <body>
     <div class="menu">
@@ -42,7 +43,7 @@
     </div>
 
     <div class="body">
-      <div class="container">
+      <div class="container animated fadeIn">
         <div class="col-md-6 left">
           <h1>Quem somos?</h1>
           <p>
